--- a/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
+++ b/4º Año/Bases de Datos/Unidad 1/1. Introducción.md
@@ -1,8 +1,8 @@
 Una ***base de datos*** es una colección de datos, que poseen cierta relación entre sí, y los cuales son almacenados de forma coherente. Dichos datos son de relevancia para las empresas o personas que lo almacenan.
-Un sistema de gestión de bases de datos es una colección de programas que permiten a los usuarios crear y mantener una base de datos. El objetivo principal de estos sistemas es proporcionar una forma de ***almacenar y recuperar*** la información de una base de datos de manera ***práctica y eficiente***.
+Un ***sistema de gestión de bases de datos (SGBD)*** es una colección de programas que permiten a los usuarios crear y mantener una base de datos. El objetivo principal de estos sistemas es proporcionar una forma de *almacenar* y *recuperar* la información de una base de datos de manera *práctica* y *eficiente*.
 ## Propósitos de los Sistemas de Bases de Datos
-Los sistemas de bases de datos surgieron en respuesta a los primeros métodos de gestión informatizada de los datos comerciales. Dado que antes de la incorporación de las bases de datos, la forma más habitual de persistir los datos era almacenarlos en archivos del sistema operativo. La forma en la que los sistemas accedían y manipulaban datos era a través de un conjunto de aplicaciones creadas específicamente para ese propósito.
-Esto agregaba complejidad adicional ante el surgimiento de nuevos requerimientos o la modificación del sistema actual, dado que la mayoría de los casos eso requería agregar nuevos datos y por ende la creación de nuevas aplicaciones para la manipulación de los mismos.
+Los sistemas de bases de datos surgieron en respuesta a los primeros métodos de gestión informatizada de los datos comerciales. Antes de la incorporación de las bases de datos, la forma más habitual de persistir los datos era almacenarlos en archivos del sistema operativo. La forma en la que los sistemas accedían y manipulaban datos era a través de un conjunto de aplicaciones creadas específicamente para ese propósito.
+Esto problemas adicionales ante el surgimiento de nuevos requerimientos o la modificación del sistema actual, dado que la mayoría de los casos eso requería agregar nuevos datos, por ende nuevos archivos y nuevas aplicaciones para la manipulación de los mismos.
 Los sistemas de bases de datos ofrecen soluciones a los siguientes problemas de los sistemas de archivos convencionales:
 1. **Redundancia e inconsistencia de datos**: En los sistemas de archivos convencionales, es común que la misma información se almacene en múltiples lugares causando una redundancia de datos. Esto puede llevar a diferencias entre estos datos, causando una inconsistencia si no se actualizan simultáneamente. Los SGBD manejan esta problemática mediante la centralización de los datos y ofreciendo mecanismos para asegurar que todos los cambios se reflejen en toda la base, manteniendo la consistencia.
 2. **Dificultad en acceder a los datos**: Sin un SGBD, cada vez que se necesite una consulta específica, puede ser necesario desarrollar una aplicación o script específico. Esto hace que el acceso a los datos sea laborioso. Los SGBD ofrecen lenguajes de consulta que permiten a los usuarios recuperar y manipular datos de manera eficiente y sin necesidad de programación específica para cada consulta.
