--- a/4º Año/Bases de Datos/Unidad 6/1. Seguridad en Bases de Datos.md
+++ b/4º Año/Bases de Datos/Unidad 6/1. Seguridad en Bases de Datos.md
@@ -1,43 +1,92 @@
-
-Al momento de operar una base de datos, existen una serie de factores que pueden amenazar la seguridad de esta, entre ellas se encuentra la pérdida de integridad, pérdida de disponibilidad, debido a que no se cuenta con los privilegios necesarios para acceder a los objetos, o la pérdida de confidencialidad. La confidencialidad de la base de datos tiene relación con la protección de los datos frente al acceso no autorizado.
+La seguridad de bases de datos abarca aspectos legales y éticos sobre el acceso a información privada, además de involucrar políticas gubernamentales e institucionales sobre la protección y resguardo de los datos confidenciales. A medida que las organizaciones crecen y el volumen de datos manipulados por las mismas aumenta drásticamente, esto muchas veces requiere la creación de distintos niveles de seguridad en el sistema para proteger datos clasificados de usuarios autorizados.
+Al momento de operar una base de datos, existen una serie de factores que pueden amenazar la seguridad, entre ellas se encuentra la ***pérdida de integridad*** causada por la modificación errónea de los datos o malas inserciones de datos. La ***pérdida de disponibilidad*** por no contar con los privilegios necesarios para acceder a esos objetos de datos. Y por último, la ***pérdida de confidencialidad*** que está relacionado con la protección de los datos frente al acceso no autorizado.
 Dentro de los mecanismos que nos proporcionan las bases de datos se encuentran los controles de acceso, que le permiten a los administradores otorgar permisos a los distintos usuarios que pueden acceder a las bases de datos, este control de acceso puede ser:
 - **Discrecional**. Este tipo de control de acceso se basa en la idea de que los propietarios de los recursos tienen la autoridad para otorgar o restringir el acceso a otros usuarios según lo consideren necesario. Conceden privilegios a usuarios, incluyendo las capacidades de acceder a archivos de datos específicos, registros o campos en un modo determinado. Esto le permite a los distintos usuarios de las bases de datos otorgar privilegios de forma específica.
-- **Obligatorios**. Impone políticas de seguridad más estrictas que son administradas no por los propietarios de los datos, sino por regulaciones rigurosas que no pueden ser modificadas por usuarios individuales. Este modelo clasifica tanto los datos como los usuarios en diferentes niveles de seguridad y sólo permite el acceso a los datos si el usuario tiene un nivel de seguridad igual o superior al del dato que intenta acceder.
+- **Obligatorios**. Impone políticas de seguridad más estrictas que son administradas no por los propietarios de los datos, sino por regulaciones rigurosas que no pueden ser modificadas por usuarios individuales. Este modelo clasifica tanto los datos como los usuarios en diferentes niveles de seguridad y solo permite el acceso a los datos si el usuario posee un rol de seguridad igual o superior al del dato que intenta acceder.
 
 >[!tldr] Categorías de Seguridad de Acuerdo al Control de Acceso
 >- **Seguridad del sistema**: La seguridad del sistema abarca el acceso y el uso de la base de datos a nivel del sistema, como el nombre de usuario y la contraseña, el espacio en disco asignado a los usuarios u operaciones del sistema que pueden realizar los usuarios.
 >- **Seguridad de los datos**: La seguridad de la base de datos abarca el acceso y el uso de los objetos de la base de datos como a las acciones que los usuarios pueden realizar con los objetos.
 
-El usuario DBA es un usuario de nivel superior que tiene los privilegios necesarios para crear usuarios y otorgarles acceso tanto a la base de datos en general como a sus objetos en particular. Los privilegios en si mismo otorgan derechos a los usuarios a ejecutar determinados sentencias SQL. Los distintos usuarios de las bases de datos necesitan tanto privilegios de sistema para poder acceder a la base de datos, como privilegios de objetos para poder manipular y acceder a los diferentes objetos de la base de datos. Además el administrador puede otorgar privilegios para que otros usuarios otorguen privilegios.
+Todas las bases de datos cuentan con un usuario administrador (DBA) este usuario de nivel superior tiene los privilegios necesarios para crear nuevos usuarios y roles, además de poder otorgar los privilegios necesarios de acceso tanto a la base de datos en general como a cada objeto particular que se encuentre en esta misma. Véase el siguiente ejemplo:
+```sql
+-- Crear un nuevo usuario
+CREATE USER dev_user WITH PASSWORD 'passworduser';
 
+-- Crea un nuevo role
+CREATE ROLE read_only;
+```
+
+Los privilegios en sí mismo otorgan derechos a los usuarios a ejecutar determinadas sentencias SQL. Los distintos usuarios de las bases de datos necesitan tanto privilegios de sistema para poder acceder a la base de datos, como privilegios de objetos para poder manipular y acceder a los datos de las diferentes tablas de la base de datos.
 >[!note] Diferencias en el Control de Acceso entre Oracle y PostgreSQL
 >Oracle a diferencia de Postgres tiene una variedad más amplia de permisos que pueden ser otorgados y revocados a los distintos usuarios. Por ejemplo en Oracle existe el privilegio de `CREATE SESSION`, sin este permiso el usuario no podrá conectarse a la base de datos. Además de eso Postgres no posee un mecanismo para crear usuarios como tal, sino que utiliza solo roles para asignar los privilegios, los roles que tengan derecho a `LOGIN` son lo que se consideran usuarios.
-### Roles y Otorgación de Privilegios
-Los administradores de las bases de datos utilizan la sentencia `GRANT` para otorgar privilegios a los demás usuarios o roles que operan la base de datos.
-Los roles por su parte es un nombre que agrupa un conjunto de privilegios, los cuales pueden ser asignados y revocados a múltiples usuarios, facilitando así la gestión de privilegios. Cabe aclarar que un usuario puede poseer múltiples roles, y por más que en dichos roles se repitan algunos privilegios eso no importa, el usuario seguirá teniendo ese privilegio. Los roles se crean con la sentencia `CREATE ROLE`, luego el usuario DBA podrá otorgarlo los privilegios correspondientes a ese rol mediante la sentencia `GRANT`.
->[!tldr] Cambios de Contraseña y de Usuarios
->El usuario DBA una vez crea un usuarios, asignando su nombre y contraseña, puede cambiar la contraseña en caso de que lo requiera, eso se puede hacer mediante la sentencia `ALTER USER`. En caso de que otro usuario que no sea el DBA quiera hacerlo este debe contar con esos privilegios.
 
-Como ya mencionamos un privilegio de objeto es el derecho de realizar una acción concreta sobre una tabla, vista, secuencia o un procedimiento determinado. Cada objeto dispone de un juego concreto de privilegios que se pueden otorgar, véase la tabla.
+La creación de los distintos usuarios del sistema permite al administrador realizar un mejor monitorio y control de las acciones que se realizan sobre la base de datos. El administrador puede crear un esquema en la base de datos que registre todas las consultas y operaciones realizadas por cada usuario para tener una mejor trazabilidad de las operaciones realizadas sobre la base de datos. Una alternativa a esto es modificar ***registro de sucesos del sistema (System Log)*** de forma tal que capture al usuario que realizó la consulta.  
+## Bases de Datos Estadísticas
+Las ***bases de datos estadísticas*** son aquellas diseñadas para proporcionar datos agregado o resumido, en lugar de permitir el acceso a información detallada de individuos o entidades específicas.
+Estas bases de datos están configuradas para limitar las consultas a funciones de agregación, protegiendo así la privacidad y evitando la identificación de datos a nivel individual. A veces es posible deducir ciertos datos de los individuos a partir de las consultas a ciertos datos agregados, lo que plantea desafíos adicionales en términos de seguridad y privacidad de los datos.
+## Roles y Otorgación de Privilegios
+Los administradores de las bases de datos utilizan la sentencia `GRANT` para otorgar privilegios a los demás usuarios que operan sobre la base de datos. Cabe aclarar que el administrador puede otorgar privilegios para que otros usuarios otorguen privilegios. A continuación veremos como otorgar privilegios básicos a un usuario.
+```sql
+-- Otorga provilegios CRUD al usuario 'dev_user'
+GRANT SELECT UPDATE DELETE INSERT ON table_name TO dev_user
+```
+
+Los roles son nombres que agrupa un conjunto de privilegios, los cuales pueden ser asignados y revocados a múltiples usuarios, facilitando así la gestión de privilegios.
+```sql
+-- Asigna el privilegio de lectura sobre todas
+-- las tablas al rol read_only
+GRANT SELECT ON ALL TABLES TO read_only;
+
+-- Asignación del role 'read_only' al usuario 'dev_user'
+GRANT read_only TO dev_user;
+```
+
+Los privilegios asignados a cada rol son especificados de forma manual por el administrador de la base de datos. Cabe aclarar que un usuario puede poseer múltiples roles, y por más que en dichos roles se repitan algunos privilegios, eso no importa, dado que el usuario seguirá teniendo dicho privilegio.
+>[!tldr] Cambios de Contraseña y de Usuarios
+>El usuario DBA puede cambiar la contraseña de otros usuarios en caso de que así lo requiera, eso se puede hacer mediante la sentencia `ALTER USER`. En caso de que otro usuario distinto al DBA desee hacerlo, el mismo debe contar con los permisos necesarios.
+
+Como ya mencionamos, un privilegio de objeto es el derecho de realizar una acción concreta sobre una tabla, vista, secuencia o un procedimiento determinado. Cada objeto dispone de un juego concreto de privilegios que se pueden otorgar, véase la tabla.
 
 | Privilegios de Objeto | Tabla | Vista | Secuencia | Procedimiento |
 | --------------------- | ----- | ----- | --------- | ------------- |
-| ALTER                 | SI    | SI    |           | SI            |
-| DELETE                | SI    | SI    |           |               |
-| EXECUTE               |       |       |           | SI            |
-| INDEX                 | SI    |       |           |               |
-| REFERENCES            | SI    | SI    |           |               |
-| SELECT                | SI    | Si    |           |               |
-| INSERT                | SI    | SI    | SI        |               |
+| `ALTER`               | SI    | SI    |           | SI            |
+| `DELETE`              | SI    | SI    |           |               |
+| `EXECUTE`             |       |       |           | SI            |
+| `INDEX`               | SI    |       |           |               |
+| `REFERENCES`          | SI    | SI    |           |               |
+| `SELECT`              | SI    | SI    |           |               |
+| `INSERT`              | SI    | SI    | SI        |               |
 
-Los propietarios de los objetos poseen todos los privilegios sobre el objeto, esto significa que los mismos usuarios pueden otorgar y revocar los derechos sobre el objeto. También esta la opción de otorgar una serie de privilegios a todos los usuarios de la base de datos, esto se logrea otorgándole los privilegios a `PUBLIC`. Además el propietario puede otorgar una serie de derechos a otros usuarios y permitir que este usuario también pueda asignar estos privilegios a otros usuarios, esto mediante la sentencia `WHIT GRANT OPTION`, con la desventaja de si el propietarios le revoca estos privilegios todo el resto de los usuarios también lo perderán.
-### Revocación de Privilegios
-En caso de que se quiera eliminar los privilegios otorgados a un usuario en particular o rol en especifico se debe utilizar la sentencia `REVOKE`. Al hacer esto se revocan los privilegios especificados de los usuarios indicados y de todos los demás usuarios a quienes se los haya otorgado el usuario revocado.
-En algunas ocasiones se necesita `CASCADE` para eliminar todas las restricciones de integridad referencial impuestas al objeto `CONSTRAINTS` mediante el privilegio `REFERENCES`.
-## Bases de Datos Estadísticas
-Las bases de datos estadísticas son aquellas diseñadas para proporcionar datos en un formato agregado o resumido, en lugar de permitir el acceso a información detallada de individuos o entidades específicas. Estas bases de datos están configuradas para limitar las consultas a funciones de agregación como sumas, promedios, y conteos, protegiendo así la privacidad y evitando la identificación de datos a nivel individual. Aunque generalmente no permiten acceder directamente a atributos particulares, en algunos casos es posible inferir información sobre campos específicos a partir de las consultas estadísticas, lo que plantea desafíos adicionales en términos de seguridad y privacidad de los datos.
+Los propietarios de los objetos poseen todos los privilegios sobre el objeto, esto significa que los mismos usuarios pueden otorgar y revocar los derechos sobre el objeto. También está la opción de otorgar una serie de privilegios a todos los usuarios de la base de datos, esto se logrea otorgándole los privilegios a `PUBLIC`. 
+El propietario de los objetos puede otorgar una serie de derechos a otros usuarios y permitir que este usuario también pueda asignar estos privilegios a otros usuarios, esto mediante la sentencia `WHIT GRANT OPTION`, véase el siguiente ejemplo:
+```sql
+-- Otorga al usuario o rol 'other_user' de otorgar los privilegios
+-- de lectura, actualización y escritura sobre la tabla 'my_table'
+-- a los demás usuario o roles de la base de datos.
+GRANT UPDATE INSERT SELECT 
+	ON my_table 
+	TO other_user WITH GRANT OPTIONS;
+```
+
+La principal desventaja de este método es que si el propietario de los objetos le revoca este privilegio a dicho usuario, el resto de usuarios a los que este último otorgo privilegios también perderán dichos privilegios sobre esos objetos.
+#### Revocación de Privilegios
+En caso de que se quiera eliminar ciertos privilegios otorgados a un usuario o rol en específico, se debe utilizar la sentencia `REVOKE`. Véase el siguiente ejemplo:
+```sql
+-- Remueve el privilegio de lectura al usuario 'other_user'
+REVOKE SELECT 
+	ON ALL TABLES 
+	TO other_user;
+
+-- Remueve el privilegio de lectura sobre la tabla 'my_table' al rol
+-- 'read_only'
+REVOKE SELECT 
+	ON my_table
+	TO other_user;
+```
+
+Al hacer esto se revocan los privilegios especificados de los usuarios o roles indicados y de todos los demás usuarios a quienes estos últimos hayan otorgado dichos privilegios especificados. Puede que en algunas ocasiones se necesita utilizar la cláusula `CASCADE` para eliminar todas las restricciones de integridad referencial impuestas al objeto `CONSTRAINTS` mediante el privilegio `REFERENCES`.
 ## Encriptación
-La encriptación es un medio de mantener datos seguros en un entorno inseguro. Consiste en aplicar un algoritmo de encriptación de datos usando alguna clave de encriptación. Los datos resultantes tienen que ser desencriptados usando una clave de desencriptado para recuperar los datos originales.
-Algunos de los algoritmos más conocidos son el AES y el DES, aunque este último a sufrido una serie de cambios a lo largo de los años debido a que podía llegar a ser desencriptado con relativa facilidad.
-En 1976 Diffie and Hellman propusieron un nuevo tipo de criptosistema, que denominaron **encriptación de clave pública**, este método está basado en funciones matemáticas y no en operaciones sobre patrones de bits. En este esquema se posee una clave privada de la que se deriva la clave pública, los mensajes se encriptan con la clave pública y se desencriptan con la clave privada.
+La encriptación es un medio que ayuda a mantener los datos seguros en un entorno inseguro. Consiste en aplicar un algoritmo de encriptación de datos usando alguna clave de encriptación. Los datos resultantes tienen que ser desencriptados usando una clave de desencriptado para recuperar los datos originales. Algunos de los algoritmos más conocidos son AES y DES, aunque este último ha sufrido una serie de cambios a lo largo de los años debido a que los datos podían llegar a ser desencriptado con relativa facilidad.
+En 1976 Diffie y Hellman propusieron un nuevo tipo de sistema de cifrado, al cual llamaron ***cifrado de clave pública***, este método está basado en funciones matemáticas y no en operaciones sobre patrones de bits. En este esquema se posee una clave privada de la cual se derivan múltiples claves públicas, los mensajes se encriptan con la clave pública y se desencriptan del lado del receptor con su clave privada.
 Las bases de datos cuentan con varias funciones criptográficas que emplean algunos de estos algoritmos antes mencionados, los cuales pueden ser utilizados para ocultar información sensible.
